Refactored Twitter Clone Project

--- a/Week3-TwitterClone/index.html
+++ b/Week3-TwitterClone/index.html
@@ -3,32 +3,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Twitter clone</title>
+  <title>Document</title>
 </head>
 <body>
-  <header>
-    <h1 class="title">Twitter Clone</h1>
-  </header>
-  <main>
-    <form class="new-form"> 
-      <label for="name">Name</label>
-      <input class="u-full-width"type="text" id="name" name="name">
-      <label for="content">Tweet</label>
-      <textarea class="u-full-width"type="text" id="content" name="content"></textarea>
-      <button class="button-primary">Tweet</button>
-    </form>
-  </main>
   
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-analytics.js"></script>
-<script src="/script.js"></script>
 </body>
 </html>
