--- a/Week4-AngularJSTweet/index.html
+++ b/Week4-AngularJSTweet/index.html
@@ -1,4 +1,5 @@
 <html lang="en" ng-app="myApp">
+  <!-- adding my ng-app directive that this is ,y root element of my AngulaJS application -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -61,6 +62,7 @@
         </div>
       </div>
     </nav>
+    <!-- adding my ng-view to create a placeholder where my tweet info will show up  -->
     <div class="container">
       <ng-view></ng-view>
     </div>
@@ -77,23 +79,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- bootstrap CDN -->
-     <!-- Latest bootstrap compiled and minified CSS -->
-     <link
-     rel="stylesheet"
-     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-     integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-     crossorigin="anonymous"
-   />
-
-   <!-- Latest compiled and minified JavaScript -->
-   <script
-     src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-     integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-     crossorigin="anonymous"
-   ></script>
-   
-    <!-- js scripts -->
+    <!-- js pages -->
     <script src="app.js"></script>
     <script src="page1/page1.js"></script>
     <script src="page2/page2.js"></script>
